--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -104,6 +104,14 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
+    "baseUrl": ".",
+    "paths": {
+      "@/": ["/"],
+      "@/routes/*": ["routes/*"],
+      "@/models/*": ["models/*"],
+      "@/controllers/*": ["controllers/*"],
+      "@/utils/*": ["utils/*"],
+    }
   }
 }
