--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,7 +16,13 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "baseUrl": ".",
+  "paths": {
+    "@/features/*": ["/src/features/*"],
+    "@/global/*": ["/src/global/*"],
+    "@/services/*": ["/src/services/*"],
+    "@/store/*": ["/src/store/*"],
+    "@/utils/*": ["/src/utils/*"]
+  }
 }
