--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.1",
     "joi": "^17.12.2",
     "mongoose": "^8.2.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
