--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,15 +14,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/features/*": ["src/features/*"],
+      "@/global/*": ["src/global/*"],
+      "@/services/*": ["src/services/*"],
+      "@/store/*": ["src/store/*"],
+      "@/utils/*": ["src/utils/*"]
+    }
   },
-  "include": ["src"],
-  "baseUrl": ".",
-  "paths": {
-    "@/features/*": ["/src/features/*"],
-    "@/global/*": ["/src/global/*"],
-    "@/services/*": ["/src/services/*"],
-    "@/store/*": ["/src/store/*"],
-    "@/utils/*": ["/src/utils/*"]
-  }
+  "include": ["src"]
 }
