Add store functionality using Context API

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,7 +21,8 @@
       "@/global/*": ["src/global/*"],
       "@/services/*": ["src/services/*"],
       "@/store/*": ["src/store/*"],
-      "@/utils/*": ["src/utils/*"]
+      "@/utils/*": ["src/utils/*"],
+      "@/types/*": ["src/types/*"]
     }
   },
   "include": ["src"]
