--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.91",
-    "@types/react": "^18.2.71",
-    "@types/react-dom": "^18.2.22",
     "antd": "^5.15.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -43,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.91",
+    "@types/react": "^18.2.71",
+    "@types/react-dom": "^18.2.22"
   }
 }
