--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.4",
     "axios": "^1.6.8",
+    "emoji-picker-react": "^4.9.2",
+    "moment": "^2.30.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
